# URDF

./: package.xml  readme.md
launch/: display.launch  gazebo.launch
meshes/: 1_base_link.STL  1_camera_link.STL  1_ground_link.STL  3_base_cam.STL  3_base_ground.STL  3_base_link.STL  base_cam.STL  base_ground.STL  cam.STL
rviz/: urdf.rviz
urdf/: ___conjunt.URDF  _conjunt.URDF  conjunt.URDF
